Creado mediante Colaboratory

--- a/Ejercicio1.ipynb
+++ b/Ejercicio1.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNpcEWJoyOPI01NyWTJirpC",
+      "authorship_tag": "ABX9TyNNyED2aNLpdxCbfoKPO5Q0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -82,7 +82,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "QrSJ4-2-oG8_",
-        "outputId": "0a5fe075-8281-47c0-b7d0-b08d0cd0e7a9"
+        "outputId": "e1fd97bc-98c4-4092-e5a7-0515da1434ba"
       },
       "source": [
         "#@markdown ### Ingrese la dirección URL de la primer imágen\n",
@@ -98,32 +98,32 @@
         "!wget {url_imagen1} -O imagen1.jpg\n",
         "!wget {url_imagen2} -O imagen2.jpg"
       ],
-      "execution_count": 1,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "--2021-06-24 01:39:20--  https://fondosmil.com/fondo/88208.jpg\n",
+            "--2021-06-24 01:53:04--  https://fondosmil.com/fondo/88208.jpg\n",
             "Resolving fondosmil.com (fondosmil.com)... 107.150.40.186\n",
             "Connecting to fondosmil.com (fondosmil.com)|107.150.40.186|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 87776 (86K) [image/jpeg]\n",
             "Saving to: ‘imagen1.jpg’\n",
             "\n",
-            "imagen1.jpg         100%[===================>]  85.72K  --.-KB/s    in 0.07s   \n",
+            "imagen1.jpg         100%[===================>]  85.72K  --.-KB/s    in 0.1s    \n",
             "\n",
-            "2021-06-24 01:39:21 (1.16 MB/s) - ‘imagen1.jpg’ saved [87776/87776]\n",
+            "2021-06-24 01:53:05 (709 KB/s) - ‘imagen1.jpg’ saved [87776/87776]\n",
             "\n",
-            "--2021-06-24 01:39:21--  https://www.wallpapertip.com/wmimgs/77-776836_fondos-de-pantalla-hd-para-pc.jpg\n",
+            "--2021-06-24 01:53:05--  https://www.wallpapertip.com/wmimgs/77-776836_fondos-de-pantalla-hd-para-pc.jpg\n",
             "Resolving www.wallpapertip.com (www.wallpapertip.com)... 204.12.221.198\n",
             "Connecting to www.wallpapertip.com (www.wallpapertip.com)|204.12.221.198|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 206472 (202K) [image/jpeg]\n",
             "Saving to: ‘imagen2.jpg’\n",
             "\n",
-            "imagen2.jpg         100%[===================>] 201.63K  --.-KB/s    in 0.08s   \n",
+            "imagen2.jpg         100%[===================>] 201.63K  1.01MB/s    in 0.2s    \n",
             "\n",
-            "2021-06-24 01:39:21 (2.51 MB/s) - ‘imagen2.jpg’ saved [206472/206472]\n",
+            "2021-06-24 01:53:06 (1.01 MB/s) - ‘imagen2.jpg’ saved [206472/206472]\n",
             "\n"
           ],
           "name": "stdout"
@@ -144,10 +144,10 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 841
+          "height": 858
         },
         "id": "ViMeXeJVqInP",
-        "outputId": "0b3522c5-eb62-4d1f-973d-59779dda066e"
+        "outputId": "2d717280-b54e-4172-cf67-dd68080c7cd9"
       },
       "source": [
         "%matplotlib inline\n",
@@ -192,11 +192,11 @@
         "imgResultado_picR_cpu = numpy.empty_like( img1_pic_cpu)\n",
         "\n",
         "# Muestro los atributos de la imagen y como se ve antes de la adición.\n",
-        "print(\"Imagen del filtro1: \" + img1_nombre + \" -\" + image1.mode + \"- [\" + str(img1_ancho) + \", \" + str(img1_alto ) + \"]\" )  \n",
+        "print(\"Imagen1: \" + img1_nombre + \" -\" + image1.mode + \"- [\" + str(img1_ancho) + \", \" + str(img1_alto ) + \"]\" )  \n",
         "plt.figure()\n",
         "imgplot1=plt.imshow( img1_pic_cpu )\n",
         "\n",
-        "print(\"Imagen del filtro2: \" + img2_nombre + \" -\" + image2.mode + \"- [\" + str(img2_ancho) + \", \" + str(img2_alto ) + \"]\" )  \n",
+        "print(\"Imagen2: \" + img2_nombre + \" -\" + image2.mode + \"- [\" + str(img2_ancho) + \", \" + str(img2_alto ) + \"]\" )  \n",
         "plt.figure()\n",
         "imgplot2=plt.imshow( img2_pic_cpu )\n",
         "\n",
@@ -215,6 +215,7 @@
         "tiempo_img = datetime.now() - tiempo_img\n",
         "\n",
         "# Muestro la imagen luego de realizar la suma de ambas.\n",
+        "print(\"Imagen resultado: \" + \"[\" + str(imagenResultado_ancho) + \", \" + str(imagenResultado_alto ) + \"]\" )  \n",
         "plt.figure()\n",
         "imgplot1 = plt.imshow( imgResultado_picR_cpu )\n",
         "\n",
@@ -223,15 +224,16 @@
         "print( \"Tiempo de conversión de imagen:\", tiempo_en_ms( tiempo_img   ), \"[ms]\" )\n",
         "print( \"Tiempo Total:\",                   tiempo_en_ms( tiempo_total ), \"[ms]\" )"
       ],
-      "execution_count": 2,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Imagen del filtro1: imagen1.jpg -RGB- [768, 1024]\n",
-            "Imagen del filtro2: imagen2.jpg -RGB- [768, 1024]\n",
-            "Tiempo de conversión de imagen: 17278.362 [ms]\n",
-            "Tiempo Total: 17490.876 [ms]\n"
+            "Imagen1: imagen1.jpg -RGB- [768, 1024]\n",
+            "Imagen2: imagen2.jpg -RGB- [768, 1024]\n",
+            "Imagen resultado: - [768, 1024]\n",
+            "Tiempo de conversión de imagen: 17567.104 [ms]\n",
+            "Tiempo Total: 17736.631 [ms]\n"
           ],
           "name": "stdout"
         },
