Creado mediante Colaboratory

--- a/Cuaderno_1_ Martes_ grupo2_2021.ipynb
+++ b/Cuaderno_1_ Martes_ grupo2_2021.ipynb
@@ -26,7 +26,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/florencia-cicarone/tp3-HPC/blob/main/Ejercicio1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/florencia-cicarone/tp3-HPC/blob/main/Cuaderno_1_%20Martes_%20grupo2_2021.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
