Creado mediante Colaboratory

--- a/Cuaderno_2_ Martes_ grupo2_2021.ipynb
+++ b/Cuaderno_2_ Martes_ grupo2_2021.ipynb
@@ -713,7 +713,7 @@
         "id": "oUPoWkVXTHSE"
       },
       "source": [
-        "Como vimos, en comparación con la CPU, la GPU es un procesador formado por muchos núcleos más pequeños y especializados. Al trabajar conjuntamente, los núcleos ofrecen un desempeño masivo cuando se puede dividir una tarea de procesamiento y es procesada por muchos núcleos. En los Ejercicios presentados se puede ver claramente una mejora en el rendimiento al utilizar GPU, observando en la comparativa de velocidades tiempos hasta 10 veces menores.\n"
+        "En este ejercicio pudimos notar como la diferencia entre el GPU y el CPU es abismal. En un simple ejemplo de 2 imágenes se puede observar una diferencia notoria. Utilizar el GPU en situaciones mas complejas puede resolver situaciones en pocas horas las cuales antes tardabas meses.\n"
       ]
     },
     {
