Creado mediante Colaboratory

--- a/Cuaderno_1_ Martes_ grupo2_2021.ipynb
+++ b/Cuaderno_1_ Martes_ grupo2_2021.ipynb
@@ -6,7 +6,7 @@
       "name": "Ejercicio1.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMkxgioPVfGzm26vu+dPaCF",
+      "authorship_tag": "ABX9TyMyezODXJ7OuNsK+ysEasjP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -114,7 +114,7 @@
         "!wget {url_imagen2} -O imagen2.jpg\n",
         "\n"
       ],
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -176,7 +176,7 @@
       "source": [
         "!pip install pycuda"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -332,7 +332,7 @@
         "print( \"Tiempo de conversión de imagen:\", tiempo_en_ms( tiempo_img   ), \"[ms]\" )\n",
         "print( \"Tiempo Total:\",                   tiempo_en_ms( tiempo_total ), \"[ms]\" )"
       ],
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -569,7 +569,7 @@
         "print(\"Tiempo TOTAL: \", tiempo_en_ms( tiempo_total ), \"[ms]\" )\n",
         "print(\"Tiempo GPU  : \", tiempo_en_ms( tiempo_img ), \"[ms]\" )"
       ],
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -664,7 +664,9 @@
         "id": "oUPoWkVXTHSE"
       },
       "source": [
-        "\n"
+        "Con este ejercicio pudimos notar la gran diferencia que hay a la hora de ejecutar un programa que tiene un gran volumen de datos en CPU vs en GPU. \n",
+        "\n",
+        "Y llegamos a la conclusión de que cuando se trata de grandes volumenes de información es más conveniente utilizar GPU ya que es notablemente más rápida.\n"
       ]
     },
     {
